--- a/ios/Podfile
+++ b/ios/Podfile
@@ -1,14 +1,13 @@
 # Uncomment this line to define a global platform for your project
-# platform :ios, '12.0'
-
+install! 'cocoapods', :disable_input_output_paths => true
+platform :ios, '16.6'
+use_frameworks!
+use_modular_headers!
+workspace 'Runner.xcworkspace'
 # CocoaPods analytics sends network stats synchronously affecting flutter build latency.
 ENV['COCOAPODS_DISABLE_STATS'] = 'true'
 
-project 'Runner', {
-  'Debug' => :debug,
-  'Profile' => :release,
-  'Release' => :release,
-}
+project 'Runner.xcodeproj', 'Debug' => :debug, 'Profile' => :release, 'Release' => :release
 
 def flutter_root
   generated_xcode_build_settings_path = File.expand_path(File.join('..', 'Flutter', 'Generated.xcconfig'), __FILE__)
@@ -29,9 +28,15 @@ flutter_ios_podfile_setup
 
 target 'Runner' do
   use_frameworks!
-
   flutter_install_all_ios_pods File.dirname(File.realpath(__FILE__))
+
+  # 기존 테스트 타겟
   target 'RunnerTests' do
+    inherit! :search_paths
+  end
+
+  # 위젯 Extension을 Runner의 child로 명시
+  target 'QuadrantDoItWidgetExtension' do
     inherit! :search_paths
   end
 end
