--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
+  riverpod_annotation: ^2.3.5
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -51,11 +54,12 @@ dependencies:
   # 추가 기능
   table_calendar: ^3.0.9
   flutter_local_notifications: ^19.2.1
-  home_widget: ^0.4.1
   uuid: ^4.5.1
   freezed: ^2.4.7
   json_serializable: ^6.7.1
   go_router: ^15.1.2
+  shared_preferences: ^2.5.3
+  home_widget: ^0.8.0
 
 
 dev_dependencies:
@@ -64,6 +68,7 @@ dev_dependencies:
   flutter_lints: ^2.0.1
 
   build_runner: ^2.4.15
+  riverpod_generator: ^2.3.11
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -75,6 +80,7 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+  generate: true
 
   # To add assets to your application, add an assets section, like this:
   # assets:
